refactor(html): update connect-src in CSP
The <meta> tag has been modified to include localhost for the development environment and the VM's API domain for production.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self';
-        connect-src 'self' https://around-api.pt-br.tripleten-services.com https://se-register-api.en.tripleten-services.com;
+        connect-src 'self' http://localhost:3000 https://api.aroundtheusa.sevencomets.com;
         img-src 'self' data: https:;
         script-src 'self';
         style-src 'self' 'unsafe-inline';
